# gnina

./: CMakeLists.txt
docker/ubuntu-24.04/: Dockerfile-cu13
gninasrc/: CMakeLists.txt
gninasrc/gninaserver/: MinimizationQuery.cpp
gninasrc/lib/: custom_terms.h  dl_scorer.cpp  molgetter.cpp  result_info.cpp  result_info.h
gninasrc/main/: main.cpp
gninasrc/pygnina/: CMakeLists.txt  __init__.py  bindings.cpp  python_streambuf.h  setup.py
test/: CMakeLists.txt
test/pygnina/: CMakeLists.txt  data.py  test_score.py
